--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,55 @@ img {
   display: block;
   max-width: 100%;
 }
+
+#datetime-picker,
+button[data-start],
+button[data-stop] {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 15px;
+  border-radius: 10px;
+  border: 1px solid #212121;
+}
+#datetime-picker {
+  text-align: center;
+  margin-bottom: 15px;
+}
+button[data-start] {
+  margin-bottom: 10px;
+  transition: background-color 250ms ease-in;
+}
+button[data-start]:enabled:hover {
+  background-color: #32c682;
+  cursor: pointer;
+}
+button[data-start]:disabled {
+  background-color: #ff5549;
+}
+button[data-stop] {
+  cursor: pointer;
+  transition: background-color 250ms ease-in;
+}
+button[data-stop]:hover {
+  background-color: rgb(245, 160, 3);
+}
+.timer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  width: 300px;
+}
+.value {
+  display: block;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.1;
+  text-align: center;
+}
+.label {
+  text-transform: uppercase;
+}
